--- a/css/main.css
+++ b/css/main.css
@@ -18,16 +18,16 @@ body {
 }
 header {
     display: flex;
-    background-color: rgb(211, 20, 20);
+    background-color: rgba(247, 201, 117, 0.993);
     justify-content: space-between;
     height: 9rem;
     align-items: center;
     padding: 1rem;
     flex-direction: column;
-
 }
-p.name-empresa {
+h1.name-empresa {
     font-size: 2rem;
+    font-weight: bold;
 }
 .logo {
     display: flex;
@@ -36,19 +36,49 @@ p.name-empresa {
 .logo img {
     height: 4rem;
     margin-right: 1rem;
+    border-radius: 1.5rem;
+}
+.nav-header {
+    padding: 1rem 0;
 }
 /* .section-sobre-nosotros {
     position: relative;
     } */
 
+.section-delivery {
+    height: 20rem;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    font-size: 2rem;
+    justify-content: center;
+}
+.delivery-container1 {
 
+}
+.delivery-container2 {
+    padding: 1rem 6rem 3rem 6rem;
+    font-weight: bold;
+}
+button.button-delivery {
+    height: 4rem;
+    background-color: rgba(255, 190, 69, 0.993);
+    border-color: rgb(236, 232, 227);
+    font-weight: bold;
+    border-radius: 1rem;
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+}
+.delivery-link {
+    text-decoration: none;
+    color: black;
+}
 .section-sobre-nosotros {
     position: relative;
 }
 img.img-1 {
     position: relative;
     width: 100%;
-    height: 30rem;
+    height: 25rem;
 }
 .sobre-nosotros {
     position: absolute;
@@ -59,23 +89,25 @@ img.img-1 {
     justify-content: center;
     align-items: center; 
     background: rgba(0,0,0,.7);
-    height: 30rem;
+    height: 25rem;
+    width: 100%;
 }
 p.p-sobre-nosotros {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0 6rem;
-    font-size: 2rem;
+    padding: 0 8rem;
+    font-size: 1.9rem;
     color: white;
-    padding: 0 10rem;
+    padding: 0 6rem;
     margin: 0 auto;
-    
+    text-align: center;
 }
 h1.title-1 {
-    padding: 2rem 0;
+    padding: 1rem 0 2rem 0rem;
     color: white;
     font-size: 3rem;
+    margin: 0 auto;
 }
 
 nav a{
@@ -103,7 +135,7 @@ nav a:hover {
     margin: 0 auto;
     padding: 0;
     box-sizing: border-box;
-    height: 30rem;
+    height: 25rem;
 }
 /* .container-menu {
     background-color: greenyellow;
@@ -114,28 +146,32 @@ nav a:hover {
 
 } */
 .section-menu
-.main-filter {
+.main-card {
     display: flex;
     align-items: center;
     background-color: antiquewhite;
-    padding-left: 1rem;
+    padding-left: 1.5rem ;
     max-width: 100%;
-    margin: 1.49rem;
-    font-size: 2.5rem;
+    margin: 1.5rem;
+    font-size: 2.2rem;
     font-weight: bold;
+    border-radius: 1rem;
 }
 .main-filter {
     background-color: antiquewhite;
 }
-
 .products {
     display: flex;
     flex-direction: column;
     gap: 2rem;
     padding: 1.5rem;
+    box-shadow: 20px;
+
 }
 .card {
     display: flex;
+    gap: .5rem;
+    height: 18rem;
 }
 .card__image {
     display: flex;
@@ -145,22 +181,51 @@ nav a:hover {
 .product-image {
     border-radius: .5rem;
     object-fit: cover;
-    height: 100%;
-    border: 1px solid gray;
+    height: 18rem;
+    border: 1px solid antiquewhite;
+    width: 18rem;
+    box-sizing: border-box;
 }
 .card__info {
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: bold;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 0 1rem;
+    /* align-items: center; */
+    padding: 0px 1.5rem 0 1.5rem;;
+    border: 2px solid;
+    border-color: rgba(167, 157, 141, 0.993);
+    border-radius: 0.5rem;
+    width: 100%;
+    height: 18rem;
+    text-align: center;
+    gap: 1rem;
+    box-sizing: border-box;
 }
-
+#botton-menu {
+    text-align: center;
+}
+button.button-menu {
+    height: 4rem;
+    width: 10rem;
+    background-color: rgba(255, 190, 69, 0.993);
+    border-color: rgb(236, 232, 227);
+    font-weight: bold;
+    border-radius: 1rem;
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+}
+.menu-link {
+    text-decoration: none;
+    color: black;
+}
+.section-ubicacion {
+    height: 1rem 0;
+}
 footer {
     align-items: center;
     text-align: center;
-    background-color: blue;
+    background-color: antiquewhite;
     height: 10rem;
     flex-direction: row;
 }
