--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
     --overall-font-size: 62.5% ;
 }
 html {
-    /** Restale vlor de 1rem a base 10, es decir: 1rem = 1opx */
+    /** Restale vlor de 1rem a base 10, es decir: 1rem = 10px */
     font-size: var( --overall-font-size);
     box-sizing: border-box;
 }
@@ -122,21 +122,6 @@ nav a:hover {
     /* align-items: center; */
     justify-content: center;
 }
-
-.container {
-    max-width: 96vw;
-    margin: 0 auto;
-    padding: 0 .8rem;
-    box-sizing: border-box;    
-
-}
-.container-fluid {
-    max-width: 100vw;
-    margin: 0 auto;
-    padding: 0;
-    box-sizing: border-box;
-    height: 25rem;
-}
 /* .container-menu {
     background-color: greenyellow;
     display: flex;
@@ -206,7 +191,7 @@ nav a:hover {
 #botton-menu {
     text-align: center;
 }
-button.button-menu {
+.button-menu {
     height: 4rem;
     width: 10rem;
     background-color: rgba(255, 190, 69, 0.993);
@@ -214,6 +199,7 @@ button.button-menu {
     font-weight: bold;
     border-radius: 1rem;
     box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+    padding: .8rem 1.2rem;
 }
 .menu-link {
     text-decoration: none;
@@ -240,6 +226,20 @@ footer {
 }
 .nav-link:hover {
     color: whitesmoke;
+}
+.container {
+    max-width: 96vw;
+    margin: 0 auto;
+    padding: 0 .8rem;
+    box-sizing: border-box;    
+
+}
+.container-fluid {
+    max-width: 100vw;
+    margin: 0 auto;
+    padding: 0;
+    box-sizing: border-box;
+    height: 25rem;
 }
 /** 567px --> 767px */
 @media ( min-width: 567px ) {
